vince: overlay: disable config_multiColorNotificationLed
Signed-off-by: Ray <vincentrayananda@gmail.com>
Signed-off-by: GhostMaster69-dev <rathore6375@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -585,4 +585,8 @@
 
     <!-- We dont not have a multicolored LED -->
     <bool name="config_multiColorBatteryLed">false</bool>
+    
+    <!-- Does the notification LED support multiple colors?
+        Used to decide if the user can change the colors -->
+    <bool name="config_multiColorNotificationLed">false</bool>
 </resources>
