--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -582,4 +582,7 @@
 
     <!-- Whether to intercept inputs on screen off. -->
     <bool name="config_enableKeyHandler">true</bool>
+
+    <!-- We dont not have a multicolored LED -->
+    <bool name="config_multiColorBatteryLed">false</bool>
 </resources>
