--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -589,4 +589,15 @@
     <!-- Does the notification LED support multiple colors?
         Used to decide if the user can change the colors -->
     <bool name="config_multiColorNotificationLed">false</bool>
+    
+    <!-- Whether device has notification LED -->
+    <bool name="config_hasNotificationLed">true</bool>
+
+    <!-- Do the battery/notification LEDs support pulsing?
+         Used to decide if we show pulse settings -->
+    <bool name="config_ledCanPulse">true</bool>
+
+    <!-- Default value for whether or not to pulse the notification LED when there is a
+         pending notification -->
+    <bool name="def_notification_pulse">true</bool>
 </resources>
